--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --mode development --env development",
+    "start": "node server.js",
     "server": "node server.js"
   },
   "author": "R Sai Charan Tej",
