--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "scripts": {
     "build": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "server": "node server.js",
-    "heroku-postbuild": "npm run build",
-    "serve": "webpack serve --mode development --env development"
+    "start": "webpack serve --mode development --env development",
+    "server": "node server.js"
   },
   "author": "R Sai Charan Tej",
   "license": "ISC",
