--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "build": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --mode development --env development",
-    "server": "node server.js"
+    "start": "node server.js",
+    "server": "node server.js",
+    "dev": "webpack serve --mode development --env development"
   },
   "author": "R Sai Charan Tej",
   "license": "ISC",
