--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "npm run test -- --watch",
     "start": "node server.js",
     "dev": "webpack serve --mode development --env development"
   },
@@ -18,11 +19,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "babel-jest": "^26.5.2",
     "babel-loader": "^8.1.0",
     "babel-plugin-css-modules-transform": "^1.6.2",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "css-loader": "^5.0.0",
+    "jest": "^26.5.3",
     "mini-css-extract-plugin": "^1.0.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.1.2",
